--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,8 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
-                }/* ,
-				{"text": "-gdb-set follow-fork-mode child"} */
+                },
+				{"text": "-gdb-set follow-fork-mode child"}
             ],
             "preLaunchTask": "tasks",
             "miDebuggerPath": "/usr/bin/gdb"
