--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 CC = gcc
-CFLAGS  = -g -Wall -Werror -Wextra
+CFLAGS  = -Wall -Werror -Wextra
 
 NAME = libft.a
 SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
