--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 CC = gcc
-CFLAGS  = -Wall -Werror -Wextra
+CFLAGS  = -g3 -Wall -Werror -Wextra
 
 NAME = libft.a
 SRCS = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
@@ -19,7 +19,7 @@ ft_isdigit.c ft_isprint.c ft_itoa.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmo
 ft_memset.c ft_putchar.c ft_putchar_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_putstr.c ft_putstr_fd.c \
 ft_split.c  ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c \
 ft_strmapi.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c ft_unsigned_itoa.c \
-ft_strlen_mod.c ft_strjoin_mod.c get_next_line.c ft_strlen_other.c
+ft_strlen_mod.c ft_strjoin_mod.c get_next_line.c ft_strlen_other.c ft_strisdigit.c
 OBJ = ${SRCS:.c=.o}
 SRCS_BONUS =  ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
 ft_isdigit.c ft_isprint.c ft_itoa.c ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdel.c \
@@ -28,7 +28,7 @@ ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar.c ft_put
 ft_putendl_fd.c ft_putnbr_fd.c ft_putstr.c ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c \
 ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c \
 ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c ft_unsigned_itoa.c \
-ft_strlen_mod.c ft_strjoin_mod.c get_next_line.c ft_strlen_other.c
+ft_strlen_mod.c ft_strjoin_mod.c get_next_line.c ft_strlen_other.c ft_strisdigit.c
 
 OBJ_BONUS = ${SRCS_BONUS:.c=.o}
 
